website/code/partialsums-gcj.log
BUILD COMMANDS FOR: partialsums.gcj

Sat Mar 11 00:05:52 PST 2006

/usr/bin/gcj -O3 -fomit-frame-pointer -funroll-loops -o partialsums.gcj_run --main=partialsums partialsums.java
partialsums.java: In class 'partialsums':
partialsums.java: In method 'partialsums.main(java.lang.String[])':
partialsums.java:41: error: Can't find method 'printf(Ljava/lang/String;DLjava/lang/String;)' in type 'java.io.PrintStream'.
               System.out.printf("%.9f\t%s\n", sum[i],  names[i] ); // JRE 1.5 only
                         ^
1 error
make[3]: [partialsums.gcj_run] Error 1 (ignored)
rm partialsums.java

=================================================================
COMMAND LINE (%A is single numeric argument):

partialsums.gcj_run %A
Error, could not exec partialsums.gcj_run 25000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/partialsums:/opt/shootout/shootout/bench/partialsums/tmp:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/lib/smarteiffel/bin:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
